[SCROLLBAR] Less intrusive scrolling, fixed padding on pokemon list

--- a/frontend/src/components/PokemonList/PokemonList.module.scss
+++ b/frontend/src/components/PokemonList/PokemonList.module.scss
@@ -1,4 +1,6 @@
 .container {
+  padding: 0 0.5rem;
+
   &:global(.grid) {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
